# selenium-looper

./: .editorconfig  Cargo.toml  Containerfile  Future Ideas.md  LICENSE  README.md
.github/workflows/: on-push.yml  on-release.yml
src/: errors.rs  main.rs  selenium.rs
static/: loop.html  site.css
templates/: index.html  loop-result.html  script-form.html
