[package]
name = "looper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.0", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["json", "macros"] }
axum-extra = { version = "0.8.0", features = ["form"] }
axum-flash = "0.7.0"
axum-htmx = "0.3.1"
axum_typed_multipart = "0.10.0"
chrono = "0.4.31"
http = "0.2.9"
include_dir = "0.7.3"
mime = "0.3.17"
mime_guess = "2.0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "std", "registry", "fmt"] }

[profile.release]
strip = true
